# spark-handson

./: .gitignore  exo3.md  pyproject.toml  report.md
infra/: bucket.tf  glue.tf  iam.tf
src/fr/hymaia/: exo2_glue_job.py
src/fr/hymaia/exo1/: main.py
src/fr/hymaia/exo2/: main.py
src/fr/hymaia/exo2/aggregate/: aggregate.py
src/fr/hymaia/exo2/clean/: clean.py
src/fr/hymaia/exo4/: no_udf.py  python_udf.py  scala_udf.py
tests/fr/hymaia/: spark_test_case.py
tests/fr/hymaia/exo2/aggregate/: test_aggregate.py
tests/fr/hymaia/exo2/clean/: test_clean.py
