[tool.poetry]
name = "spark-handson"
version = "0.1.0"
description = "Résolvez les exercices"
authors = ["Franck Cussac"]
maintainers = [
    "Anto Benedetti",
    "David Zhou",
    "Johan Ribeiro--Lamy",
    "Louis Seillier",
    "Romain Nerot"
]
packages = [
    { include = "src/fr/hymaia" }
]

[tool.poetry.dependencies]
python = "~3.10.12"
pyspark = "^3.5.3"
pandas = "^2.2.3"
pyarrow = "^17.0.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pyspark = "3.5.3"
pytest = "8.3.3"
awsglue-dev = "^2021.12.30"

[tool.poetry.scripts]
wordcount = "src.fr.hymaia.exo1.main:main"
clean-aggregate = "src.fr.hymaia.exo2.main:main"
python_udf = "src.fr.hymaia.exo4.python_udf:main"
scala_udf = "src.fr.hymaia.exo4.scala_udf:main"
no_udf = "src.fr.hymaia.exo4.no_udf:main"
